--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/angular-material": "^1.1.49",
     "@types/body-parser": "^1.16.3",
     "@types/cookie-parser": "^1.3.30",
+    "@types/core-js": "^0.9.41",
+    "@types/express-session": "0.0.32",
     "@types/fs-extra": "^2.1.0",
     "@types/lodash": "^4.14.63",
     "@types/morgan": "^1.7.32",
