--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -3,6 +3,9 @@
     "module": "commonjs",
     "target": "es6",
     "noImplicitAny": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [
+      "es6"
+    ]
   }
 }
